# spot-autonomy

./: Dockerfile  LICENSE  README.md  build_and_run.bash
aut_common/: CMakeLists.txt  package.xml
aut_common/include/aut_common/: graph.h  transformer.h
aut_common/src/: graph.cc  transformer.cc
aut_global_planner/: CMakeLists.txt  package.xml
aut_global_planner/include/aut_global_planner/: global_planner.h
aut_global_planner/launch/: global_planner_launch.py
aut_global_planner/src/: global_planner.cc  main.cc
aut_launch/: CMakeLists.txt  package.xml
aut_launch/launch/: aut_launch.py  data_launch.py  mapping_launch.py  navigation_launch.py  velodyne_launch.py
aut_launch/params/: velodyne_params.yaml
aut_lidar_odometry/: CMakeLists.txt  package.xml
aut_lidar_odometry/include/aut_lidar_odometry/: feature_extraction.h  lidar_odometry.h  optimization.h
aut_lidar_odometry/launch/: lidar_odometry_launch.py
aut_lidar_odometry/msg/: Features.msg
aut_lidar_odometry/params/: lidar_odometry_params.yaml
aut_lidar_odometry/src/: feature_extraction.cc  lidar_odometry.cc  main.cc  optimization.cc
aut_local_planner/: CMakeLists.txt  package.xml
aut_local_planner/include/aut_local_planner/: a_star.h  local_planner.h  utils.h
aut_local_planner/launch/: local_planner_launch.py
aut_local_planner/src/: a_star.cc  local_grid.cc  main.cc  utils.cc
aut_localization/: CMakeLists.txt  package.xml
aut_localization/include/aut_localization/: monte_carlo_localization.h
aut_localization/launch/: localization_launch.py
aut_localization/params/: localization_params.yaml
aut_localization/src/: main.cc  monte_carlo_localization.cc
aut_msgs/: CMakeLists.txt  package.xml
aut_msgs/action/: NavigateToGoal.action
aut_msgs/msg/: Fiducial.msg  LocalGrid.msg  PointCloudWithPose.msg  SpeedCommand.msg
aut_msgs/srv/: GraphModif.srv  LoadMap.srv  SaveMap.srv  SetGlobalPath.srv
aut_slam/: CMakeLists.txt  package.xml
aut_slam/include/aut_slam/: graph_optimization.h
aut_slam/launch/: slam_launch.py
aut_slam/params/: slam_params.yaml
aut_slam/src/: graph_optimization.cc  main.cc
aut_spot/: package.xml  setup.cfg  setup.py
aut_spot/aut_spot/: spot_command.py  spot_data.py
aut_spot/launch/: spot_command_launch.py  spot_launch.py
aut_spot/params/: spot_params.yaml
aut_utils/: CMakeLists.txt  package.xml
aut_utils/include/aut_utils/: utils.h
aut_utils/src/: utils.cc
