<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aut_slam</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>aut_msgs</depend>
  <depend>PCL</depend>
  <depend>pcl_conversions</depend>
  <depend>Eigen</depend>
  <depend>std_msgs</depend>
  <depend>aut_utils</depend>
  <depend>GTSAM</depend>
  <depend>tf2_ros</depend>
  <depend>dynamicEDT3D</depend>
  <depend>octomap</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
